changed relative url handling by using uris